--- a/static/scss/common.scss
+++ b/static/scss/common.scss
@@ -141,10 +141,17 @@ a.link-button {
   }
 }
 
-button.unstyled {
+button.unstyled,
+button.btn-secondary.unstyled {
   border: none;
   background-color: inherit;
+  color: inherit;
   padding: 0;
+
+  &:hover, &:active, &:not(:disabled):not(.disabled):active {
+    background-color: inherit;
+    color: inherit;
+  }
 }
 
 .link-light-blue {
@@ -230,13 +237,13 @@ button.unstyled {
   margin-top: 25px;
 }
 
-ul.dropdown-menu {
+.dropdown-menu {
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5), 0 13px 11px 8px rgba(0,0,0,0.12);
   border-color: $white-smoke;
   border-radius: 0;
   padding: 10px 15px;
 
-  li.dropdown-item {
+  .dropdown-item {
     display: block;
     padding: 7px 0;
     font-size: 16px;
