--- a/static/scss/product-details.scss
+++ b/static/scss/product-details.scss
@@ -86,6 +86,15 @@
             padding: 6px 15px;
             flex-shrink: 0;
           }
+
+          img, .video-js {
+            width: 100%;
+            height: 217px;
+
+            @include media-breakpoint-up(md) {
+              height: 263px;
+            }
+          }
         }
 
         .text {
@@ -99,13 +108,6 @@
     }
 
     .video-js {
-      width: 100%;
-      height: 217px;
-
-      @include media-breakpoint-up(md) {
-        height: 263px;
-      }
-
       .vjs-big-play-button {
         background: black;
         opacity: 0.8;
