--- a/static/scss/product-details.scss
+++ b/static/scss/product-details.scss
@@ -74,7 +74,7 @@
           width: 100%;
         }
 
-        &.video {
+        &.hero-media {
           padding-bottom: 0;
 
           @include media-breakpoint-down(md) {
