--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -24,7 +24,7 @@
                 <div id="productDetailEnrollment"></div>
               </div>
             </div>
-            <div class="content-col video">
+            <div class="content-col hero-media">
               {% if page.video_url %}
               <video-js
                 class="vjs-default-skin vjs-big-play-centered"
