--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -5,6 +5,7 @@ $material-icon-height: 24px;
 $primary: #a31f34;
 $gray: #363636;
 $gray-85: #d9d9d9;
+$gray-darker: #c2c2c2;
 $success: #28977e;
 
 $light-gray: #8a8b8c;
