--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -1,6 +1,30 @@
 {% load static %}
 
 <footer class="footer">
+  <div class="support-links">
+    <div class="container content-holder">
+      <div class="row">
+        <div class="col-sm-6 clearfix">
+          <img src={% static 'images/help.png' %} alt="Help" loading="lazy"/>
+          <div class="info">
+            <a href=" https://mitxonline.zendesk.com/hc/en-us">
+              <h2>Help & FAQ</h2>
+            </a>
+            <p>Find answers to your questions.</p>
+          </div>
+        </div>
+        <div class="col-sm-6 clearfix">
+          <img src={% static 'images/contact.png' %} alt="Contact Us" loading="lazy"/>
+          <div class="info">
+            <a href="https://mitxonline.zendesk.com/hc/en-us/requests/new">
+              <h2>Contact Us</h2>
+            </a>
+            <p>Let us know how we can assist you.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container">
     <div class="footer-top">
       <div class="mit-info">
@@ -33,7 +57,6 @@
       <div class="col-xl-4 col-lg-5 col-md-6 cold-sm-12">
         <span class="copyright">&copy; {% now "Y" %} Massachusetts Institute of Technology</span>
       </div>
-
     </div>
   </div>
 </footer>
