Adding checkout page UI

--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -22,7 +22,7 @@
 @import "home";
 @import "product-details";
 @import "product-faculty-members";
-
+@import "cart";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
