Adding UX tweaks, upsell card

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -86,6 +86,8 @@
       </section>
       <section class="text-block">
         <div class="container">
+          <div id="upsellCard"></div>
+
           <div class="text-holder">
             {% if page.about %}
             <div class="content-data">
