Accessibility: Bypass Blocks: bypass the header on site pages for screen readers

--- a/ecommerce/templates/checkout_interstitial.html
+++ b/ecommerce/templates/checkout_interstitial.html
@@ -9,7 +9,7 @@
 {% block title %}{% trans "mitxonline" %}{% endblock %}
 
 {% block content %}    
-    <section class="info-block">
+    <section id="main" class="info-block">
         <div class="container">
             <div class="content-row">
                 <div class="content-col">
