--- a/main/templates/404.html
+++ b/main/templates/404.html
@@ -11,7 +11,7 @@
 
 
 {% block content %}
-<div class="error-block">
+<div id="main" class="error-block">
   <div class="container text-center">
     <h2><strong>Oops!</strong> it looks like you have encountered an error. We are unable to find the page you are looking for.</h2>
     <img class="not-found-img" src="{% static 'images/404.png' %}" alt="Page not found">
