--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="hero-container" style="background-image: url('{% wagtail_img_src page.hero%}')">
+<div id="main" class="hero-container" style="background-image: url('{% wagtail_img_src page.hero%}')">
   <div class="container hero-content">
     <div class="hero-title">
       {% if page.hero_title %}
