--- a/cms/templates/resource_page.html
+++ b/cms/templates/resource_page.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-  <div class="resource-banner">
+  <div id="main" class="resource-banner">
     <div class="container">
       <h1 class="text-uppercase">{{ page.title }}</h1>
       {% if page.sub_heading %}
