--- a/main/templates/500.html
+++ b/main/templates/500.html
@@ -11,7 +11,7 @@
 
 
 {% block content %}
-<div class="error-block d-flex flex-column justify-content-center">
+<div id="main" class="error-block d-flex flex-column justify-content-center">
   <div class="container text-center">
     <img class="server-error-img img-fluid" src="{% static 'images/500.png' %}" alt="">
   </div>
