Updated the Receipt Page with additional Details

--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -23,6 +23,7 @@
 @import "product-details";
 @import "product-faculty-members";
 @import "cart";
+@import "receipt";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
