--- a/ecommerce/templates/checkout_interstitial.html
+++ b/ecommerce/templates/checkout_interstitial.html
@@ -1,10 +1,5 @@
 {% extends "base.html" %}
-{% load i18n static render_bundle %}
-
-{% block headercontent %}
-  <div id="header"></div>
-  {% render_bundle 'header' %}
-{% endblock %}
+{% load i18n static %}
 
 {% block title %}{% trans "mitxonline" %}{% endblock %}
 
