--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
-{% load i18n static render_bundle %}
+{% load i18n static %}
+{% load render_bundle from webpack_loader %}
 
+{% block headercontent %} {% endblock %}
 {% block title %}{% trans "mitxonline" %}{% endblock %}
 
 {% block content %}
