--- a/main/templates/resource_template.html
+++ b/main/templates/resource_template.html
@@ -1,12 +1,7 @@
 {% extends "base.html" %}
-{% load render_bundle wagtailcore_tags %}
+{% load wagtailcore_tags %}
 
 {% block title %}{{ site_name }} | {{ page.title }}{% endblock %}
-
-{% block headercontent %}
-<div id="header"></div>
-{% render_bundle 'header' %}
-{% endblock %}
 
 {% block content %}
 
