--- a/cms/templates/flexiblepricing/flexible_pricing_request_form.html
+++ b/cms/templates/flexiblepricing/flexible_pricing_request_form.html
@@ -4,48 +4,51 @@
 {% block title %}{{ site_name }} | {{ page.title }}{% endblock %}
 
 {% block content %}
+<div id="main" class="main-page-content">
+  <div class="std-page-body container auth-page">
+    <div class="auth-card card-shadow auth-form">
+    
+      <div class="auth-header">
+          <h1 class="text-uppercase" id="{{ page.title|slugify }}">Request Flexible Pricing</h1>
 
-  <div id="main" class="resource-banner">
-    <div class="container">
-      <h1 class="text-uppercase">{{ page.title }}</h1>
-      {% if page.sub_heading %}
-        <h2>{{ page.sub_heading }}</h2>
-      {% endif %}
-    </div>
-  </div>
+          {% if course is not None %}
+          <p>Requesting flexible pricing for {{ course.product.title }} ({{ course.product.readable_id }}).</p>
+          {% endif %}
 
-<div class="container resource-container">
-  <div class="row">
-    <div class="col-md-2">
-    </div>
-    <div class="col-md-8">
-        <h2 class="text-uppercase" id="{{ page.title|slugify }}">{{ page.title }}</h2>
-
-        {% if course is not None %}
-        <p>Requesting flexible pricing for {{ course.product.title }} ({{ course.product.readable_id }}).</p>
-        {% endif %}
-
-        {{ page.intro|richtext }}
-        
-        {% if user.is_authenticated %}{# is logged in #}
-          {% if has_submission %}{# has submission #}
-            {% if prior_request.is_approved %}{# request status #}
-              {{ page.application_approved_text|richtext }}
-            {% elif prior_request.is_denied %}
-              {{ page.application_denied_text|richtext }}
+          {{ page.intro|richtext }}
+          
+          {% if user.is_authenticated %}{# is logged in #}
+            {% if has_submission %}{# has submission #}
+              {% if prior_request.is_approved %}{# request status #}
+                {{ page.application_approved_text|richtext }}
+              {% elif prior_request.is_denied %}
+                {{ page.application_denied_text|richtext }}
+              {% else %}
+                {{ page.application_processing_text|richtext }}
+              {% endif %}{# request status #}
             {% else %}
-              {{ page.application_processing_text|richtext }}
-            {% endif %}{# request status #}
+              <form action="{% pageurl page %}" method="POST">
+                  {% csrf_token %}
+                  <div class="form-group">
+                    <label for="{{ form.your_income.id_for_label }}">Your Income</label>
+                    <input type="number" name="your_income" step="any" class="form-control" id="id_your_income">
+                    {{form.your_income.errors}}
+                  </div>
+                  <div class="form-group">
+                    <label for="{{ form.income_currency.id_for_label }}">Income Currency</label>
+                    <select name="income_currency" id="id_income_currency" class="form-control">
+                      {{form.income_currency.option.choices}}
+                    </select>
+                  </div>
+                  <div class="row submit-row no-gutters justify-content-end">
+                    <button type="submit" class="btn btn-primary btn-gradient-red large">Submit</button>
+                  </div>
+              </form>
+            {% endif %}{# has submission #}
           {% else %}
-            <form action="{% pageurl page %}" method="POST">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit">
-            </form>
-          {% endif %}{# has submission #}
-        {% else %}
-        {{ page.guest_text|richtext }}
-        {% endif %} {# is logged in #}
+          {{ page.guest_text|richtext }}
+          {% endif %} {# is logged in #}
+      </div>
     </div>
   </div>
 </div>
