--- a/cms/templates/flexiblepricing/flexible_pricing_request_form.html
+++ b/cms/templates/flexiblepricing/flexible_pricing_request_form.html
@@ -20,25 +20,32 @@
           {% if user.is_authenticated %}{# is logged in #}
             {% if has_submission %}{# has submission #}
               {% if prior_request.is_approved %}{# request status #}
-                {{ page.application_approved_text|richtext }}
+                <b>{{ page.application_approved_text|richtext }}</b>
               {% elif prior_request.is_denied %}
-                {{ page.application_denied_text|richtext }}
+                <b>{{ page.application_denied_text|richtext }}</b>
               {% else %}
-                {{ page.application_processing_text|richtext }}
+                <b>{{ page.application_processing_text|richtext }}</b>
               {% endif %}{# request status #}
             {% else %}
               <form action="{% pageurl page %}" method="POST">
                   {% csrf_token %}
                   <div class="form-group">
-                    <label for="{{ form.your_income.id_for_label }}">Your Income</label>
-                    <input type="number" name="your_income" step="any" class="form-control" id="id_your_income">
-                    {{form.your_income.errors}}
+                    <label for="your_income">Your Income</label>
+                    <input type="number" name="your_income" step="any" class="form-control" id="your_income" aria-describedby="your_incomeError">
+                    {% for error in form.your_income.errors %}
+                      <div class="form-error" id="your_incomeError" role="alert">{{error}}</div>
+                    {% endfor %}
                   </div>
                   <div class="form-group">
-                    <label for="{{ form.income_currency.id_for_label }}">Income Currency</label>
-                    <select name="income_currency" id="id_income_currency" class="form-control">
-                      {{form.income_currency.option.choices}}
+                    <label for="income_currency">Income Currency</label>
+                    <select name="income_currency" id="income_currency" class="form-control" >
+                      {% for choice in form.fields.income_currency.choices %}
+                        <option value="{{ choice.0 }}">{{ choice.1 }}</option>  
+                      {%  endfor %}
                     </select>
+                    {% for error in form.income_currency.errors %}
+                      <div class="form-error" id="income_currencyError" role="alert">{{error}}</div>
+                    {% endfor %}
                   </div>
                   <div class="row submit-row no-gutters justify-content-end">
                     <button type="submit" class="btn btn-primary btn-gradient-red large">Submit</button>
@@ -46,7 +53,7 @@
               </form>
             {% endif %}{# has submission #}
           {% else %}
-          {{ page.guest_text|richtext }}
+            <b>{{ page.guest_text|richtext }}</b>
           {% endif %} {# is logged in #}
       </div>
     </div>
