--- a/cms/templates/flexiblepricing/flexible_pricing_request_form_landing.html
+++ b/cms/templates/flexiblepricing/flexible_pricing_request_form_landing.html
@@ -11,7 +11,7 @@
       <div class="auth-header">
         <h1 class="text-uppercase" id="{{ page.title|slugify }}">Request Flexible Pricing</h1>
         <p>{{ page.title }}</p>
-        <b>{{ self.thank_you_text|richtext }}</b>
+        {{ self.thank_you_text|richtext }}
       </div>
     </div>
   </div>
