--- a/cms/templates/flexiblepricing/flexible_pricing_request_form.html
+++ b/cms/templates/flexiblepricing/flexible_pricing_request_form.html
@@ -4,59 +4,73 @@
 {% block title %}{{ site_name }} | {{ page.title }}{% endblock %}
 
 {% block content %}
-<div id="main" class="main-page-content">
-  <div class="std-page-body container auth-page">
-    <div class="auth-card card-shadow auth-form">
-    
-      <div class="auth-header">
-          <h1 class="text-uppercase" id="{{ page.title|slugify }}">Request Flexible Pricing</h1>
-
-          {% if course is not None %}
-          <p>Requesting flexible pricing for {{ course.product.title }} ({{ course.product.readable_id }}).</p>
-          {% endif %}
-
-          {{ page.intro|richtext }}
-          
-          {% if user.is_authenticated %}{# is logged in #}
-            {% if prior_request is None or prior_request.is_reset %}{# has submission #}
-              <form action="{% pageurl page %}" method="POST">
-                {% csrf_token %}
-                <div class="form-group">
-                  <label for="your_income">Your Income</label>
-                  <input type="number" name="your_income" step="any" class="form-control" id="your_income" aria-describedby="your_incomeError">
-                  {% for error in form.your_income.errors %}
-                    <div class="form-error" id="your_incomeError" role="alert">{{error}}</div>
-                  {% endfor %}
-                </div>
-                <div class="form-group">
-                  <label for="income_currency">Income Currency</label>
-                  <select name="income_currency" id="income_currency" class="form-control" >
-                    {% for choice in form.fields.income_currency.choices %}
-                      <option value="{{ choice.0 }}">{{ choice.1 }}</option>  
-                    {%  endfor %}
-                  </select>
-                  {% for error in form.income_currency.errors %}
-                    <div class="form-error" id="income_currencyError" role="alert">{{error}}</div>
-                  {% endfor %}
-                </div>
-                <div class="row submit-row no-gutters justify-content-end">
-                  <button type="submit" class="btn btn-primary btn-gradient-red large">Submit</button>
-                </div>
-              </form>
-            {% else %}
-              {% if prior_request.is_approved %}{# request status #}
-                {{ page.application_approved_text|richtext }}
-              {% elif prior_request.is_denied %}
-                {{ page.application_denied_text|richtext }}
-              {% else %}
-                {{ page.application_processing_text|richtext }}
-              {% endif %}{# request status #}
-            {% endif %}{# has submission #}
-          {% else %}
-            {{ page.guest_text|richtext }}
-          {% endif %} {# is logged in #}
+<div id="main" class="main-page-content container">
+  <div class="std-page-body">
+  {% if user.is_authenticated %}{# is logged in #}
+    {% if prior_request is None or prior_request.is_reset %}{# has submission #}
+      <div class="flexible-pricing-head">
+        <h1>{{ page.title|richtext }}</h1>
+        {{ page.intro|richtext }}
       </div>
-    </div>
+      <div class="container auth-page">
+        <div class="auth-card card-shadow auth-form flexible-pricing-form">
+          <div class="auth-header">
+            <h4 class="tell-us-about-your-income">Tell us about your income</h4>
+            <form action="{% pageurl page %}" method="POST">
+              {% csrf_token %}
+              <div class="form-group">
+                <label for="your_income" id="your_income_label">Yearly Income{%if form.fields.your_income.required %}<span class="required">*</span>{% endif %}</label>
+                <input type="number" name="your_income" step="any" class="form-control {%if form.your_income.errors %}errored{% endif %}" id="your_income" aria-describedby="your_incomeError">
+                {% for error in form.your_income.errors %}
+                  <div class="form-error" id="your_incomeError" role="alert">{{error}}</div>
+                {% endfor %}
+              </div>
+              <div class="form-group">
+                <label for="income_currency">Income Currency{%if form.fields.income_currency.required %}<span class="required">*</span>{% endif %}</label>
+                <span class="income_currency_label">The currency you’re paid in.</span>
+                <select name="income_currency" id="income_currency" class="form-control {%if form.income_currency.errors %}errored{% endif %}">
+                  <option value="">Choose</option>
+                  {% for choice in form.fields.income_currency.choices %}
+                    <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                  {%  endfor %}
+                </select>
+                {% for error in form.income_currency.errors %}
+                  <div class="form-error" id="income_currencyError" role="alert">{{error}}</div>
+                {% endfor %}
+              </div>
+              <div class="form-group">
+                <input id="" type="checkbox" required="required" />
+                <span class="financial-assist-testify">I testify that the income I reported is true and accurate. I am aware that I may be asked to verify the reported income with documentation.</span>
+              </div>
+              <div class="row submit-row no-gutters justify-content-center">
+                <button type="submit" class="btn btn-primary btn-gradient-red large">Submit request</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    {% else %}
+      {% if prior_request.is_approved %}{# request status #}
+        <div class="flexible-pricing-head">
+          {{ page.application_approved_text|richtext }}
+        </div>
+        <a href="/" class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
+          Get certificate at reduced rate
+        </a>
+      {% elif prior_request.is_denied %}
+        <div class="flexible-pricing-head">
+          {{ page.application_denied_text|richtext }}
+        </div>
+      {% else %}
+        <div class="flexible-pricing-head">
+          {{ page.application_processing_text|richtext }}
+        </div>
+      {% endif %}{# request status #}
+    {% endif %}{# has submission #}
+  {% else %}
+    {{ page.guest_text|richtext }}
+  {% endif %} {# is logged in #}
   </div>
+
 </div>
 {% endblock %}
