Format email using HTML

--- a/flexiblepricing/templates/mail/flexible_price/body.html
+++ b/flexiblepricing/templates/mail/flexible_price/body.html
@@ -1,7 +1,10 @@
 {% extends "email_base.html" %}
 
 {% block content %}
-
-{{body}}
-
+    <br>
+    <div style="text-align: left">
+        <p style="font-weight: normal; margin: 0 0 20px;">Dear {{ first_name }},</p>
+        <p style="font-weight: normal; margin: 0 0 20px;">{{ message }}</p>
+        <p style="font-weight: normal; margin: 0 0 20px;">Thank you,<br> "The {{program_name}} MITxOnline team"</p>
+    </div>
 {% endblock %}
