--- a/mail/templates/email_base.html
+++ b/mail/templates/email_base.html
@@ -239,13 +239,16 @@
 	            <tr>
 	                <td style="padding: 20px;">
                       {% block logo %}
-                      <img src="{{ base_url }}/static/images/mitx-online-logo.png" width="160" height="80" alt="{{ site_name }}" style="height: auto; margin-bottom: -10px; margin-right: 10px;"/>
+                      <img src="https://rc.mitxonline.mit.edu/static/images/mitx-online-logo.png" width="160" height="80" alt="{{ site_name }}" style="height: auto; margin-bottom: -10px; margin-right: 10px;"/>
                       {% endblock %}
 	                </td>
 	            </tr>
 		        <!-- Email Header : END -->
-
-            {% block content %}{% endblock %}
+                <tr>
+                    <td>
+                        {% block content %}{% endblock %}
+                    </td>
+                </tr>
 
             <!-- Clear Spacer : BEGIN -->
               <tr>
