Check if no flex price, or flex price is reset
Display the form if there is no flex price record for the user, or if the flex price record that exists is in a reset state.

--- a/cms/templates/flexiblepricing/flexible_pricing_request_form.html
+++ b/cms/templates/flexiblepricing/flexible_pricing_request_form.html
@@ -18,7 +18,32 @@
           {{ page.intro|richtext }}
           
           {% if user.is_authenticated %}{# is logged in #}
-            {% if has_submission %}{# has submission #}
+            {% if prior_request is None or prior_request.is_reset %}{# has submission #}
+              <form action="{% pageurl page %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                  <label for="your_income">Your Income</label>
+                  <input type="number" name="your_income" step="any" class="form-control" id="your_income" aria-describedby="your_incomeError">
+                  {% for error in form.your_income.errors %}
+                    <div class="form-error" id="your_incomeError" role="alert">{{error}}</div>
+                  {% endfor %}
+                </div>
+                <div class="form-group">
+                  <label for="income_currency">Income Currency</label>
+                  <select name="income_currency" id="income_currency" class="form-control" >
+                    {% for choice in form.fields.income_currency.choices %}
+                      <option value="{{ choice.0 }}">{{ choice.1 }}</option>  
+                    {%  endfor %}
+                  </select>
+                  {% for error in form.income_currency.errors %}
+                    <div class="form-error" id="income_currencyError" role="alert">{{error}}</div>
+                  {% endfor %}
+                </div>
+                <div class="row submit-row no-gutters justify-content-end">
+                  <button type="submit" class="btn btn-primary btn-gradient-red large">Submit</button>
+                </div>
+              </form>
+            {% else %}
               {% if prior_request.is_approved %}{# request status #}
                 {{ page.application_approved_text|richtext }}
               {% elif prior_request.is_denied %}
@@ -26,31 +51,6 @@
               {% else %}
                 {{ page.application_processing_text|richtext }}
               {% endif %}{# request status #}
-            {% else %}
-              <form action="{% pageurl page %}" method="POST">
-                  {% csrf_token %}
-                  <div class="form-group">
-                    <label for="your_income">Your Income</label>
-                    <input type="number" name="your_income" step="any" class="form-control" id="your_income" aria-describedby="your_incomeError">
-                    {% for error in form.your_income.errors %}
-                      <div class="form-error" id="your_incomeError" role="alert">{{error}}</div>
-                    {% endfor %}
-                  </div>
-                  <div class="form-group">
-                    <label for="income_currency">Income Currency</label>
-                    <select name="income_currency" id="income_currency" class="form-control" >
-                      {% for choice in form.fields.income_currency.choices %}
-                        <option value="{{ choice.0 }}">{{ choice.1 }}</option>  
-                      {%  endfor %}
-                    </select>
-                    {% for error in form.income_currency.errors %}
-                      <div class="form-error" id="income_currencyError" role="alert">{{error}}</div>
-                    {% endfor %}
-                  </div>
-                  <div class="row submit-row no-gutters justify-content-end">
-                    <button type="submit" class="btn btn-primary btn-gradient-red large">Submit</button>
-                  </div>
-              </form>
             {% endif %}{# has submission #}
           {% else %}
             {{ page.guest_text|richtext }}
