Add styling to div instead of every p

--- a/flexiblepricing/templates/mail/flexible_price/body.html
+++ b/flexiblepricing/templates/mail/flexible_price/body.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <br>
-    <div style="text-align: left">
-        <p style="font-weight: normal; margin: 0 0 20px;">Dear {{ first_name }},</p>
-        <p style="font-weight: normal; margin: 0 0 20px;">{{ message }}</p>
-        <p style="font-weight: normal; margin: 0 0 20px;">Thank you,<br> "The {{program_name}} MITxOnline team"</p>
+    <div style="text-align: left; font-weight: normal; margin: 0 0 20px;">
+        <p>Dear {{ first_name }},</p>
+        <p>{{ message }}</p>
+        <p>Thank you,<br> "The {{program_name}} MITxOnline team"</p>
     </div>
 {% endblock %}
