Flexible pricing clean up email template (#743)
* Format email using HTML

* Move logo to the top of the email

* Format

* Remove unused constant

* Revert logo

* Add styling to div instead of every p

--- a/flexiblepricing/templates/mail/flexible_price/body.html
+++ b/flexiblepricing/templates/mail/flexible_price/body.html
@@ -1,7 +1,10 @@
 {% extends "email_base.html" %}
 
 {% block content %}
-
-{{body}}
-
+    <br>
+    <div style="text-align: left; font-weight: normal; margin: 0 0 20px;">
+        <p>Dear {{ first_name }},</p>
+        <p>{{ message }}</p>
+        <p>Thank you,<br> "The {{program_name}} MITxOnline team"</p>
+    </div>
 {% endblock %}
