--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -24,6 +24,7 @@
 @import "product-faculty-members";
 @import "cart";
 @import "receipt";
+@import "certificates/certificate";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
