--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -41,9 +41,47 @@
             {% if start_date %}
             <div class="stat-col">
               <div class="title">start date</div>
-              <div class="text">
+              <div class="date-links-text text" id="start_date">
                 <strong>{{ start_date|date:"F j, Y" }}</strong>
               </div>
+              {% if page.product.unexpired_runs|length > 1 %}
+                {% with course_runs=page.product.unexpired_runs %}
+                  <strong class="more-dates">
+                    <a tabindex="0" role="button" class="dates-tooltip" id="datesPopover" data-trigger="focus" href="#" onClick="event.preventDefault();"
+                      data-toggle="popover" data-placement="auto" title="More dates available for this course" data-html="true"
+                      data-content="
+                        <div>
+                          <p>Click below to enroll in one of these dates</p>
+                        </div>
+                        {% for course_run in course_runs %}
+                            <div>
+                              <a class='date-link' id='{{ course_run.courseware_id }}' href='#' onClick='event.preventDefault();'>Start Date {{ course_run.start_date|date:'F j, Y' }}</a>
+                            </div>
+                        {% endfor %}
+                      ">
+                      More Dates
+                    </a>
+                  </strong>
+                {% endwith %}
+              {% elif page.product.first_course_unexpired_runs|length > 1 %}
+                {% with course_runs=page.product.first_course_unexpired_runs product_id=page.product.products.first.id %}
+                  <strong class="more-dates">
+                    <a tabindex="0" role="button" class="dates-tooltip" id="datesPopover" data-trigger="focus" href="#" onClick="event.preventDefault();"
+                      data-toggle="popover" data-html="true" data-placement="auto" title="More dates available for this program"
+                      data-content="
+                        <div>
+                          <p>Click below to enroll in one of these dates</p>
+                        </div>
+                        {% for course_run in course_runs %}
+                            <div>
+                              <a class='date-link' id='{{ course_run.courseware_id }}' href='#' onClick='event.preventDefault();'>Start Date {{ course_run.start_date|date:'F j, Y' }}</a>
+                            </div>
+                        {% endfor %}">
+                      More Dates
+                    </a>
+                  </strong>
+                {% endwith %}
+              {% endif %}
             </div>
             {% endif %}
             {% if page.length %}
