--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -48,7 +48,7 @@
                 {% with course_runs=page.product.unexpired_runs %}
                   <strong class="more-dates">
                     <a tabindex="0" role="button" class="dates-tooltip" id="datesPopover" data-trigger="focus" href="#" onClick="event.preventDefault();"
-                      data-toggle="popover" data-placement="auto" title="More dates available for this course" data-html="true"
+                      data-toggle="popover" data-placement="auto" title="More dates available" data-html="true"
                       data-content="
                         <div>
                           <p>Click below to enroll in one of these dates</p>
@@ -67,7 +67,7 @@
                 {% with course_runs=page.product.first_course_unexpired_runs product_id=page.product.products.first.id %}
                   <strong class="more-dates">
                     <a tabindex="0" role="button" class="dates-tooltip" id="datesPopover" data-trigger="focus" href="#" onClick="event.preventDefault();"
-                      data-toggle="popover" data-html="true" data-placement="auto" title="More dates available for this program"
+                      data-toggle="popover" data-html="true" data-placement="auto" title="More dates available"
                       data-content="
                         <div>
                           <p>Click below to enroll in one of these dates</p>
